[package]
name = "fuel-pyth-utils"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Utilities for Fuel's Pyth integration."

[dependencies]
base64 = "0.22"
fuels = { version = "0.54", features = ["fuel-core-lib"] }
rand = "0.8"
hex = "0.4"
reqwest = "0.11"
serde_json = "1.0"
